add open graph meta tags

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <title>Movie Browser</title>
     <link rel="icon" type="image/svg+xml" href="/logo.svg?v=2" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Browse movie details and collections."/>
-    <title>Movie Browser</title>
+    <meta name="og:title" content="Movie Browser" />
+    <meta name="og:description" content="Browse movie details and collections." />
+    <meta name="og:image" content="client/preview.png" />
+    <meta name="og:url" content="https://movie.yerf.dev/" />
   </head>
   <body>
     <div id="root"></div>
