--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Browse movie details and collections."/>
     <meta name="og:title" content="Movie Browser" />
     <meta name="og:description" content="Browse movie details and collections." />
-    <meta name="og:image" content="client/preview.png" />
+    <meta name="og:image" content="https://movie.yerf.dev/preview.png" />
     <meta name="og:url" content="https://movie.yerf.dev/" />
   </head>
   <body>
